--- a/config
+++ b/config
@@ -7,6 +7,6 @@ master = "127.0.0.1:2013"
 start = "main"
 standalone = "0.0.0.0:2013"
 luaservice = root.."service/?.lua;"..root.."service/?/init.lua"
-cpath = root.."service/?.so"
+--cpath = root.."service/?.so"
 protopath = root.."proto"
 redis = root .. "redisconf"
